# qrcode

./: .gitattributes  Makefile.windows  README.md  capi.go  cgo.go  cgo_go12.go  cgo_go13.go  decode.go  decoder.go  doc.go  dummy.go  generate_generic.go  generate_windows.go  hello.go  png.go  png_test.go  qr.go
internal/coding/: qr.go  qr_test.go
internal/libdecodeqr/: CMakeLists.txt  README.md  build_msvc_proj.bat
internal/libdecodeqr/examples/simple/: simpletest.cpp
internal/libdecodeqr/libdecodeqr/: libdecodeqr.cpp  libdecodeqr.def
internal/libqrencode/: qrencode.go  qrencode.h  qrgen.go
